--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>FU COIN - The Meme Coin Revolution</title>
+  <title>FYOU COIN - The Meme Coin Revolution</title>
   <style>
     body {
       font-family: 'Arial', sans-serif;
@@ -99,14 +99,14 @@
 </head>
 <body>
   <div class="logo">🚀</div>
-  <h1>FU COIN 🚀</h1>
+  <h1>FYOU COIN 🚀</h1>
   <p style="font-size: 1.3em; margin-bottom: 30px;">The meme coin that says what we're all thinking</p>
 
   <div class="countdown" id="countdown">Loading countdown...</div>
 
   <div class="wallet">
     <h2>🎉 Join the Presale</h2>
-    <p>Send SOL to this address to secure your FU COIN:</p>
+    <p>Send SOL to this address to secure your FYOU COIN:</p>
     <div class="wallet-address" id="walletAddress">
       7xKXtg2CW87d97TXJSDpbD5jBkheTqA83TZRuJosgHhR
     </div>
@@ -117,7 +117,7 @@
   </div>
 
   <footer>
-    © 2025 FU COIN | 
+    © 2025 FYOU COIN | 
     <a href="#" onclick="openSocial('twitter')">Twitter</a> | 
     <a href="#" onclick="openSocial('telegram')">Telegram</a>
   </footer>
